--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ button.primary{background:var(--accent);color:#fff;padding:14px 18px;border-radi
 </head>
 <body>
   <a href="tryy.html">
-  <img src="images/apnadoor-logo.png" class="logo">
+  <img src="images/hero.pngpng" class="logo">
 </a>
 
 <header class="header-hero">
