--- a/index.html
+++ b/index.html
@@ -33,6 +33,19 @@ button.primary{background:var(--accent);color:#fff;padding:14px 18px;border-radi
 .testimonials{background:linear-gradient(180deg,#ffffff, #f1f5f9);padding:40px;border-radius:18px}
 .footer{background:#021124;color:#94a3b8;padding:36px 0;margin-top:40px}
 @media (max-width:900px){.header-hero .row{flex-direction:column}.hero-cards{grid-template-columns:repeat(1,1fr)}.gallery{grid-template-columns:repeat(2,1fr)}}
+/* LOGO FIX */
+.logo {
+  height: 60px;
+  width: auto;
+  max-width: 220px;
+  object-fit: contain;
+  display: block;
+}
+
+body > a {
+  display: inline-block;
+  padding: 16px 24px;
+}
 </style>
 <meta name="keywords" content="aluminium sliding door price, aluminium door price in india, aluminium window price, upvc sliding door price, upvc door cost, aluminium glass door, aluminium partition price, sliding door 6x8 price, balcony sliding door aluminium, office partition aluminium, aluminium door manufacturer india, aluminium door supplier, upvc window price india, best aluminium door company, cheapest aluminium sliding door, factory price aluminium door">
 
