--- a/index.html
+++ b/index.html
@@ -41,10 +41,45 @@ button.primary{background:var(--accent);color:#fff;padding:14px 18px;border-radi
   object-fit: contain;
   display: block;
 }
+/* TOP BAR */
+.top-bar{
+  background:#0b1b3a;
+  border-bottom:1px solid rgba(255,255,255,0.08);
+}
 
-body > a {
-  display: inline-block;
-  padding: 16px 24px;
+.top-inner{
+  max-width:1180px;
+  margin:auto;
+  display:flex;
+  align-items:center;
+  justify-content:space-between;
+  padding:12px 20px;
+}
+
+.logo-wrap{
+  display:flex;
+  align-items:center;
+}
+
+/* ACTION BUTTONS */
+.top-actions{
+  display:flex;
+  gap:12px;
+}
+
+.call-btn{
+  color:#fff;
+  text-decoration:none;
+  font-weight:600;
+}
+
+.wa-btn{
+  background:#25d366;
+  color:#fff;
+  padding:8px 14px;
+  border-radius:20px;
+  text-decoration:none;
+  font-weight:600;
 }
 </style>
 <meta name="keywords" content="aluminium sliding door price, aluminium door price in india, aluminium window price, upvc sliding door price, upvc door cost, aluminium glass door, aluminium partition price, sliding door 6x8 price, balcony sliding door aluminium, office partition aluminium, aluminium door manufacturer india, aluminium door supplier, upvc window price india, best aluminium door company, cheapest aluminium sliding door, factory price aluminium door">
@@ -64,9 +99,19 @@ body > a {
 
 </head>
 <body>
-  <a href="tryy.html">
-  <img src="logo.png" class="logo">
-</a>
+
+<header class="top-bar">
+  <div class="top-inner">
+    <a href="trry.html" class="logo-wrap">
+      <img src="logo.png" class="logo" alt="ApnaDoor Logo">
+    </a>
+
+    <div class="top-actions">
+      <a href="tel:9873802205" class="call-btn">📞 Call</a>
+      <a href="https://wa.me/919873802205" class="wa-btn">WhatsApp</a>
+    </div>
+  </div>
+</header>
 
 <header class="header-hero">
   <div class="container">
