--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@ button.primary{background:var(--accent);color:#fff;padding:14px 18px;border-radi
 }
 /* TOP BAR */
 .top-bar{
-  background:#0b1b3a;
-  border-bottom:1px solid rgba(255,255,255,0.08);
+  background:linear-gradient(180deg,#000,#0a0a0a);
+  border-bottom:1px solid rgba(255,255,255,0.15);
 }
 
 .top-inner{
