--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ button.primary{background:var(--accent);color:#fff;padding:14px 18px;border-radi
 }
 /* TOP BAR */
 .top-bar{
-  background:linear-gradient(180deg,#000,#0a0a0a);
+  background:#000;
   border-bottom:1px solid rgba(255,255,255,0.15);
 }
 
