--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@ button.primary{background:var(--accent);color:#fff;padding:14px 18px;border-radi
         <div style="margin-top:12px"><strong>Starting ₹480–₹650 / sq.ft*</strong></div>
       </div>
       <div class="card">
-        <img src="https://images.unsplash.com/photo-1600585154207-0bfcf1e0f9c9" alt="Window" style="width:100%;border-radius:10px;margin-bottom:12px">
+        <img src="images/upvc-sliding-door.jpg" alt="uPVC Sliding Door">
         <h3>uPVC Sliding Door</h3>
         <div class="small">Thermal insulated, low maintenance</div>
         <div style="margin-top:12px"><strong>Starting ₹550–₹750 / sq.ft*</strong></div>
