--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>Premium Aluminium & uPVC Doors — Lowest Price, Premium Finish</title>
+<link rel="icon" href="/favicon.ico">
 <meta name="description" content="World-class Aluminium & uPVC Sliding Doors across India — Direct Factory Price, Instant WhatsApp booking: 9873802205. Lowest Price Guarantee & premium installation.">
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
 <style>
