--- a/index.html
+++ b/index.html
@@ -113,8 +113,15 @@ button.primary{background:var(--accent);color:#fff;padding:14px 18px;border-radi
     </div>
   </div>
 </header>
+<section class="container" style="margin-top:40px;">
+  <h2>PAN India Prices</h2>
 
-<header class="header-hero">
+  <a href="aluminium-sliding-door-price-india.html" style="display:block;margin:8px 0;">
+    Aluminium Sliding Door Price in India
+  </a>
+
+</section>
+  <header class="header-hero">
   <div class="container">
     <div class="row">
       <div class="hero-text" style="flex:1">
