--- a/index.html
+++ b/index.html
@@ -119,7 +119,13 @@ button.primary{background:var(--accent);color:#fff;padding:14px 18px;border-radi
   <a href="aluminium-sliding-door-price-india.html" style="display:block;margin:8px 0;">
     Aluminium Sliding Door Price in India
   </a>
+<a href="upvc-door-price-india.html" style="display:block;margin:8px 0;">
+  uPVC Door Price in India
+</a>
 
+<a href="aluminium-window-price-india.html" style="display:block;margin:8px 0;">
+  Aluminium Window Price in India
+</a>
 </section>
   <header class="header-hero">
   <div class="container">
