--- a/index.html
+++ b/index.html
@@ -126,6 +126,10 @@ button.primary{background:var(--accent);color:#fff;padding:14px 18px;border-radi
 <a href="aluminium-window-price-india.html" style="display:block;margin:8px 0;">
   Aluminium Window Price in India
 </a>
+  
+  <a href="upvc-sliding-door-price-india.html" style="display:block;margin:8px 0;">
+  uPVC Sliding Door Price in India
+</a>
 </section>
   <header class="header-hero">
   <div class="container">
