--- a/index.html
+++ b/index.html
@@ -103,7 +103,8 @@ button.primary{background:var(--accent);color:#fff;padding:14px 18px;border-radi
 
 <header class="top-bar">
   <div class="top-inner">
-<a href="index.html">class="logo-wrap">
+<a href="index.html"
+  >class="logo-wrap">
       <img src="logo.png" class="logo" alt="ApnaDoor Logo">
     </a>
 
