--- a/upvc-door-price-india.html
+++ b/upvc-door-price-india.html
@@ -9,6 +9,23 @@
 
 <body>
 
+<!-- ===== TOP BAR (SAME AS HOME PAGE) ===== -->
+<header class="top-bar">
+  <div class="top-inner">
+
+    <a href="index.html" class="logo-wrap">
+      <img src="logo.png" class="logo" alt="ApnaDoor Logo">
+    </a>
+
+    <div class="top-actions">
+      <a href="tel:9873802205" class="call-btn">📞 Call</a>
+      <a href="https://wa.me/919873802205" class="wa-btn">WhatsApp</a>
+    </div>
+
+  </div>
+</header>
+<!-- ===== TOP BAR END ===== -->
+  
 <h1>uPVC Door Price in India</h1>
 
 <p>
