--- a/upvc-door-price-india.html
+++ b/upvc-door-price-india.html
@@ -6,68 +6,16 @@
   <meta name="description" content="Check uPVC door price in India. Main door, bathroom & balcony uPVC doors at factory direct price. PAN India delivery & installation.">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
-  
-  </style>
-  /* LOGO FIX */
-.logo {
-  height: 60px;
-  width: auto;
-  max-width: 220px;
-  object-fit: contain;
-  display: block;
-}
-/* TOP BAR */
-.top-bar{
-  background:#000;
-  border-bottom:1px solid rgba(255,255,255,0.15);
-}
-
-.top-inner{
-  max-width:1180px;
-  margin:auto;
-  display:flex;
-  align-items:center;
-  justify-content:space-between;
-  padding:12px 20px;
-}
-
-.logo-wrap{
-  display:flex;
-  align-items:center;
-}
-
-/* ACTION BUTTONS */
-.top-actions{
-  display:flex;
-  gap:12px;
-}
-
-.call-btn{
-  color:#fff;
-  text-decoration:none;
-  font-weight:600;
-}
-
-.wa-btn{
-  background:#25d366;
-  color:#fff;
-  padding:8px 14px;
-  border-radius:20px;
-  text-decoration:none;
-  font-weight:600;
-}
-</style>
-  
-  <body>
-
-<!-- ===== TOP BAR (SAME AS HOME PAGE) ===== -->
+  <!-- ===== TOP BAR START ===== -->
 <header class="top-bar">
   <div class="top-inner">
 
-    <a href="index.html" class="logo-wrap">
-      <img src="logo.png" class="logo" alt="ApnaDoor Logo">
+    <!-- LOGO -->
+    <a href="/" class="logo-wrap">
+      <img src="/logo.png" class="logo" alt="ApnaDoor Logo">
     </a>
 
+    <!-- ACTION BUTTONS -->
     <div class="top-actions">
       <a href="tel:9873802205" class="call-btn">📞 Call</a>
       <a href="https://wa.me/919873802205" class="wa-btn">WhatsApp</a>
@@ -76,7 +24,7 @@
   </div>
 </header>
 <!-- ===== TOP BAR END ===== -->
-  
+
 <h1>uPVC Door Price in India</h1>
 
 <p>
