--- a/upvc-door-price-india.html
+++ b/upvc-door-price-india.html
@@ -5,17 +5,79 @@
   <title>uPVC Door Price in India | Factory Direct | ApnaDoor</title>
   <meta name="description" content="Check uPVC door price in India. Main door, bathroom & balcony uPVC doors at factory direct price. PAN India delivery & installation.">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<style>
+    *{box-sizing:border-box;font-family:Inter,system-ui,-apple-system}
+    body{margin:0;background:#f7fafc;color:#0f172a;line-height:1.45}
+
+    /* LOGO */
+    .logo{
+      height:42px;
+      width:auto;
+      max-width:180px;
+      object-fit:contain;
+      display:block;
+    }
+
+    /* TOP BAR */
+    .top-bar{
+      background:#000;
+      border-bottom:1px solid rgba(255,255,255,0.15);
+    }
+
+    .top-inner{
+      max-width:1180px;
+      margin:auto;
+      display:flex;
+      align-items:center;
+      justify-content:space-between;
+      padding:8px 20px;
+    }
+
+    .logo-wrap{
+      display:flex;
+      align-items:center;
+    }
+
+    /* ACTION BUTTONS */
+    .top-actions{
+      display:flex;
+      gap:12px;
+    }
+
+    .call-btn{
+      color:#fff;
+      text-decoration:none;
+      font-weight:600;
+    }
+
+    .wa-btn{
+      background:#25d366;
+      color:#fff;
+      padding:8px 14px;
+      border-radius:20px;
+      text-decoration:none;
+      font-weight:600;
+    }
+
+    /* PAGE CONTENT */
+    .container{
+      max-width:1180px;
+      margin:40px auto;
+      padding:0 20px;
+    }
+  </style>
 </head>
-  <!-- ===== TOP BAR START ===== -->
+
+<body>
+
+<!-- ===== TOP BAR START ===== -->
 <header class="top-bar">
   <div class="top-inner">
 
-    <!-- LOGO -->
     <a href="/" class="logo-wrap">
       <img src="/logo.png" class="logo" alt="ApnaDoor Logo">
     </a>
 
-    <!-- ACTION BUTTONS -->
     <div class="top-actions">
       <a href="tel:9873802205" class="call-btn">📞 Call</a>
       <a href="https://wa.me/919873802205" class="wa-btn">WhatsApp</a>
@@ -23,8 +85,7 @@
 
   </div>
 </header>
-<!-- ===== TOP BAR END ===== -->
-
+  
 <h1>uPVC Door Price in India</h1>
 
 <p>
