--- a/aluminium-partition-delhi.html
+++ b/aluminium-partition-delhi.html
@@ -5,10 +5,88 @@
   <title>Aluminium Partition in Delhi | Office & Home</title>
   <meta name="description" content="Get aluminium partition work in Delhi for offices and homes. Glass & solid aluminium partitions at factory price.">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
+<style>
+    *{box-sizing:border-box;font-family:Inter,system-ui,-apple-system}
+    body{margin:0;background:#f7fafc;color:#0f172a;line-height:1.45}
+
+    /* LOGO */
+    .logo{
+      height:42px;
+      width:auto;
+      max-width:180px;
+      object-fit:contain;
+      display:block;
+    }
+
+    /* TOP BAR */
+    .top-bar{
+      background:#000;
+      border-bottom:1px solid rgba(255,255,255,0.15);
+    }
+
+    .top-inner{
+      max-width:1180px;
+      margin:auto;
+      display:flex;
+      align-items:center;
+      justify-content:space-between;
+      padding:8px 20px;
+    }
+
+    .logo-wrap{
+      display:flex;
+      align-items:center;
+    }
+
+    /* ACTION BUTTONS */
+    .top-actions{
+      display:flex;
+      gap:12px;
+    }
+
+    .call-btn{
+      color:#fff;
+      text-decoration:none;
+      font-weight:600;
+    }
+
+    .wa-btn{
+      background:#25d366;
+      color:#fff;
+      padding:8px 14px;
+      border-radius:20px;
+      text-decoration:none;
+      font-weight:600;
+    }
+
+    /* PAGE CONTENT */
+    .container{
+      max-width:1180px;
+      margin:40px auto;
+      padding:0 20px;
+    }
+  </style>
 </head>
 
 <body>
 
+<!-- ===== TOP BAR START ===== -->
+<header class="top-bar">
+  <div class="top-inner">
+
+    <a href="/" class="logo-wrap">
+      <img src="/logo.png" class="logo" alt="ApnaDoor Logo">
+    </a>
+
+    <div class="top-actions">
+      <a href="tel:9873802205" class="call-btn">📞 Call</a>
+      <a href="https://wa.me/919873802205" class="wa-btn">WhatsApp</a>
+    </div>
+
+  </div>
+</header>
+  
 <h1>Aluminium Partition in Delhi</h1>
 
 <p>
