--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@ button.primary{background:var(--accent);color:#fff;padding:14px 18px;border-radi
 <meta property="og:locale" content="en_IN" />
 
 <!-- Robots & Canonical -->
-<link rel="canonical" href="https://apnadoor.in/" />
-<meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1" />
+<link rel="canonical" href="https://apnadoor.in">
+<meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1"/>
 
 <!-- Sitemap hint -->
 <link rel="sitemap" type="application/xml" href="/sitemap.xml" />
