--- a/aluminium-partition-delhi.html
+++ b/aluminium-partition-delhi.html
@@ -91,7 +91,7 @@ button.primary{background:var(--accent);color:#fff;padding:14px 18px;border-radi
 <meta property="og:locale" content="en_IN" />
 
 <!-- Robots & Canonical -->
-<link rel="canonical" href="https://apnadoor.in/aluminium-partition-delhi.html/" />
+<link rel="canonical" href="https://apnadoor.in/aluminium-partition-delhi.html">
 <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1" />
 
 <!-- Sitemap hint -->
