--- a/index.html
+++ b/index.html
@@ -401,6 +401,22 @@ function bookVisit(){
   const url='https://wa.me/919873802205?text='+encodeURIComponent('I want to book a site visit. Charge ₹499.');
   window.open(url,'_blank');
 }
+  <script type="application/ld+json">
+    
+{
+ "@context": "https://schema.org",
+ "@type": "LocalBusiness",
+ "name": "ApnaDoor",
+ "telephone": "+91-9873802205",
+ "areaServed": "India",
+ "priceRange": "₹₹",
+ "url": "https://apnadoor.in",
+ "sameAs": ["https://wa.me/919873802205"],
+ "serviceOffered": {
+   "@type": "Service",
+   "name": "Aluminium & uPVC Doors and Windows"
+ }
+}
 </script>
 </body>
 </html>
