--- a/index.html
+++ b/index.html
@@ -400,10 +400,11 @@ function estimate(){
 function bookVisit(){
   const url='https://wa.me/919873802205?text='+encodeURIComponent('I want to book a site visit. Charge ₹499.');
   window.open(url,'_blank');
+  <script>
+    
 }
   <script type="application/ld+json">
-    
-{
+  
  "@context": "https://schema.org",
  "@type": "LocalBusiness",
  "name": "ApnaDoor",
