--- a/index.html
+++ b/index.html
@@ -98,6 +98,21 @@ button.primary{background:var(--accent);color:#fff;padding:14px 18px;border-radi
 <!-- Sitemap hint -->
 <link rel="sitemap" type="application/xml" href="/sitemap.xml" />
 
+  <script type="application/ld+json">
+{
+ "@context": "https://schema.org",
+ "@type": "LocalBusiness",
+ "name": "ApnaDoor",
+ "telephone": "+91-9873802205",
+ "areaServed": "India",
+ "priceRange": "₹₹",
+ "url": "https://apnadoor.in",
+ "sameAs": ["https://wa.me/919873802205"],
+ "serviceOffered": {
+   "@type": "Service",
+   "name": "Aluminium & uPVC Doors and Windows"
+}
+</script>
 </head>
 <body>
 
@@ -400,24 +415,9 @@ function estimate(){
 function bookVisit(){
   const url='https://wa.me/919873802205?text='+encodeURIComponent('I want to book a site visit. Charge ₹499.');
   window.open(url,'_blank');
- 
-    
+   
 }
-  <script type="application/ld+json">
   
- "@context": "https://schema.org",
- "@type": "LocalBusiness",
- "name": "ApnaDoor",
- "telephone": "+91-9873802205",
- "areaServed": "India",
- "priceRange": "₹₹",
- "url": "https://apnadoor.in",
- "sameAs": ["https://wa.me/919873802205"],
- "serviceOffered": {
-   "@type": "Service",
-   "name": "Aluminium & uPVC Doors and Windows"
- }
-}
 </script>
 </body>
 </html>
