--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ button.primary{background:var(--accent);color:#fff;padding:14px 18px;border-radi
  "name": "ApnaDoor",
  "telephone": "+91-9873802205",
  "areaServed": "India",
- "priceRange": "₹₹",
+ "priceRange": "INR",
  "url": "https://apnadoor.in",
  "sameAs": ["https://wa.me/919873802205"],
  "serviceOffered": {
