--- a/index.html
+++ b/index.html
@@ -98,21 +98,27 @@ button.primary{background:var(--accent);color:#fff;padding:14px 18px;border-radi
 <!-- Sitemap hint -->
 <link rel="sitemap" type="application/xml" href="/sitemap.xml" />
 
-  <script type="application/ld+json">
+<!-- LocalBusiness Schema -->
+<script type="application/ld+json">
 {
- "@context": "https://schema.org",
- "@type": "LocalBusiness",
- "name": "ApnaDoor",
- "telephone": "+91-9873802205",
- "areaServed": "India",
- "priceRange": "INR",
- "url": "https://apnadoor.in",
- "sameAs": ["https://wa.me/919873802205"],
- "serviceOffered": {
-   "@type": "Service",
-   "name": "Aluminium & uPVC Doors and Windows"
+  "@context": "https://schema.org",
+  "@type": "LocalBusiness",
+  "name": "ApnaDoor",
+  "telephone": "+91-9873802205",
+  "areaServed": "India",
+  "priceRange": "INR",
+  "url": "https://apnadoor.in",
+  "sameAs": [
+    "https://wa.me/919873802205"
+  ],
+  "serviceOffered": {
+    "@type": "Service",
+    "name": "Aluminium & uPVC Doors and Windows"
+  }
 }
 </script>
+
+<!-- FAQ Schema -->
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
