--- a/index.html
+++ b/index.html
@@ -126,6 +126,9 @@ button.primary{background:var(--accent);color:#fff;padding:14px 18px;border-radi
       "priceRange": "INR",
       "url": "https://apnadoor.in",
       "sameAs": ["https://wa.me/919873802205"]
+       "address": {
+  "@type": "PostalAddress",
+  "addressCountry": "IN"
     },
     {
       "@type": "FAQPage",
