--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Premium Aluminium & uPVC Doors — Lowest Price, Premium Finish</title>
+<title>Aluminium & uPVC Sliding Doors Price in India | Factory Direct – ApnaDoor</title>
 <link rel="icon" href="/favicon.ico">
-<meta name="description" content="World-class Aluminium & uPVC Sliding Doors across India — Direct Factory Price, Instant WhatsApp booking: 9873802205. Lowest Price Guarantee & premium installation.">
+<meta name="description" content="Aluminium & uPVC sliding doors at factory-direct prices across India. Get instant quote, premium finish & professional installation.">
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
 <style>
 :root{--bg:#f7fafc;--card:#ffffff;--accent:#0b5cff;--muted:#64748b;--green:#16a34a;--gold:#f59e0b}
@@ -98,7 +98,7 @@ button.primary{background:var(--accent);color:#fff;padding:14px 18px;border-radi
 <!-- Sitemap hint -->
 <link rel="sitemap" type="application/xml" href="/sitemap.xml" />
 
-<script type="application/ld+json">
+  <script type="application/ld+json">
 {
   "@context": "https://schema.org",
   "@graph": [
@@ -125,10 +125,11 @@ button.primary{background:var(--accent);color:#fff;padding:14px 18px;border-radi
       "areaServed": "India",
       "priceRange": "INR",
       "url": "https://apnadoor.in",
-      "sameAs": ["https://wa.me/919873802205"]
-       "address": {
-  "@type": "PostalAddress",
-  "addressCountry": "IN"
+      "sameAs": ["https://wa.me/919873802205"],
+      "address": {
+        "@type": "PostalAddress",
+        "addressCountry": "IN"
+      }
     },
     {
       "@type": "FAQPage",
@@ -170,29 +171,12 @@ button.primary{background:var(--accent);color:#fff;padding:14px 18px;border-radi
     </div>
   </div>
 </header>
-<section class="container" style="margin-top:40px;">
-  <h2>PAN India Prices</h2>
-
-  <a href="aluminium-sliding-door-price-india.html" style="display:block;margin:8px 0;">
-    Aluminium Sliding Door Price in India
-  </a>
-<a href="upvc-door-price-india.html" style="display:block;margin:8px 0;">
-  uPVC Door Price in India
-</a>
-
-<a href="aluminium-window-price-india.html" style="display:block;margin:8px 0;">
-  Aluminium Window Price in India
-</a>
   
-  <a href="upvc-sliding-door-price-india.html" style="display:block;margin:8px 0;">
-  uPVC Sliding Door Price in India
-</a>
-</section>
   <header class="header-hero">
   <div class="container">
     <div class="row">
       <div class="hero-text" style="flex:1">
-        <h1>Lowest Price + Premium Finish — Pan-India Aluminium & uPVC Doors</h1>
+      <h1>Aluminium & uPVC Sliding Doors Price in India – Factory Direct</h1>
         <p>We beat branded shop prices — same or better quality at 25–40% lower cost. Instant quotes, professional installs, and a Lowest Price Guarantee. Call/WhatsApp: 9873802205</p>
         <div style="display:flex;gap:12px;flex-wrap:wrap">
           <a class="cta" href="https://wa.me/919873802205">Book on WhatsApp</a>
@@ -348,7 +332,7 @@ button.primary{background:var(--accent);color:#fff;padding:14px 18px;border-radi
   </section>
 
   <section style="padding-top:40px">
-    <h2>Aluminium & uPVC Doors – Complete India Price & Buying Guide</h2>
+    <h2>Aluminium & uPVC Doors & Complete India Price & Buying Guide</h2>
     <p class="small">
     Looking for aluminium sliding door price in India, uPVC sliding door cost, aluminium glass door price, balcony sliding door aluminium rate, or office aluminium partition price? You are in the right place. We provide premium-quality aluminium and uPVC doors across India at direct factory prices. Our aluminium sliding doors are designed for homes, flats, villas, offices, shops, and commercial spaces. Compared to branded companies that quote ₹40,000–₹55,000 for a standard 6x8 aluminium sliding door, we deliver the same or better quality in the range of ₹28,000–₹32,000 including professional installation.
     <br><br>
@@ -378,7 +362,7 @@ button.primary{background:var(--accent);color:#fff;padding:14px 18px;border-radi
   </section>
 
   <section style="padding-top:40px">
-    <h2>Google Trust & Local Presence</h2>
+    <h2>Premium Aluminium & uPVC Doors</h2>
     <p class="small">Our business follows Google-compliant SEO practices. We maintain Google Business profiles, verified contact details, clear pricing information and real customer interactions.</p>
     <ul class="small">
       <li>Verified phone number & WhatsApp support</li>
@@ -387,18 +371,7 @@ button.primary{background:var(--accent);color:#fff;padding:14px 18px;border-radi
       <li>No misleading claims or spam keywords</li>
     </ul>
   </section>
-
-  <section style="padding-top:40px">
-    <h2>Step-by-Step: How Google Finds & Ranks Our Website</h2>
-    <ol class="small">
-      <li>Search Console submission for indexing</li>
-      <li>XML sitemap submission</li>
-      <li>Fast-loading mobile-first pages</li>
-      <li>High-intent keywords (aluminium sliding door price, uPVC door cost, etc.)</li>
-      <li>User engagement through calculator & WhatsApp booking</li>
-    </ol>
-  </section>
-
+  
 </main>
 
 <footer class="footer">
