--- a/aluminium-window-price-india.html
+++ b/aluminium-window-price-india.html
@@ -82,6 +82,7 @@ button.primary{background:var(--accent);color:#fff;padding:14px 18px;border-radi
   text-decoration:none;
   font-weight:600;
 }
+  
 </style>
 
 <!-- SEO: Open Graph -->
@@ -92,12 +93,70 @@ button.primary{background:var(--accent);color:#fff;padding:14px 18px;border-radi
 
 <!-- Robots & Canonical -->
 <link rel="canonical" href="https://apnadoor.in/aluminium-window-price-india.html">
-<meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1" />
+<meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1"/>
 
 <!-- Sitemap hint -->
 <link rel="sitemap" type="application/xml" href="/sitemap.xml" />
 
-</head>
+  <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@graph": [
+    {
+      "@type": "Organization",
+      "@id": "https://apnadoor.in/#organization",
+      "name": "ApnaDoor",
+      "url": "https://apnadoor.in",
+      "logo": "https://apnadoor.in/logo.png",
+      "contactPoint": {
+        "@type": "ContactPoint",
+        "telephone": "+91-9873802205",
+        "contactType": "customer support",
+        "areaServed": "IN",
+        "availableLanguage": ["English", "Hindi"]
+      },
+      "sameAs": ["https://wa.me/919873802205"]
+    },
+    {
+      "@type": "LocalBusiness",
+      "@id": "https://apnadoor.in/#localbusiness",
+      "name": "ApnaDoor",
+      "telephone": "+91-9873802205",
+      "areaServed": "India",
+      "priceRange": "INR",
+      "url": "https://apnadoor.in",
+      "sameAs": ["https://wa.me/919873802205"],
+      "address": {
+        "@type": "PostalAddress",
+        "addressCountry": "IN"
+      }
+    },
+    {
+      "@type": "FAQPage",
+      "@id": "https://apnadoor.in/#faq",
+      "mainEntity": [
+        {
+          "@type": "Question",
+          "name": "Aluminium sliding door price in India?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Aluminium sliding door price in India starts from ₹480 per sq ft depending on size, glass type and city."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "uPVC sliding door price per sq ft?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "uPVC sliding door price usually ranges from ₹550 to ₹750 per sq ft including installation."
+          }
+        }
+      ]
+    }
+  ]
+}
+</script>
+</head> 
 <body>
 
 <header class="top-bar">
@@ -112,29 +171,12 @@ button.primary{background:var(--accent);color:#fff;padding:14px 18px;border-radi
     </div>
   </div>
 </header>
-<section class="container" style="margin-top:40px;">
-  <h2>PAN India Prices</h2>
-
-  <a href="aluminium-sliding-door-price-india.html" style="display:block;margin:8px 0;">
-    Aluminium Sliding Door Price in India
-  </a>
-<a href="upvc-door-price-india.html" style="display:block;margin:8px 0;">
-  uPVC Door Price in India
-</a>
-
-<a href="aluminium-window-price-india.html" style="display:block;margin:8px 0;">
-  Aluminium Window Price in India
-</a>
   
-  <a href="upvc-sliding-door-price-india.html" style="display:block;margin:8px 0;">
-  uPVC Sliding Door Price in India
-</a>
-</section>
   <header class="header-hero">
   <div class="container">
     <div class="row">
       <div class="hero-text" style="flex:1">
-        <h1>uAluminium Window Price in India</h1>
+      <h1>uAluminium Window Price in India</h1>
         <p>We beat branded shop prices — same or better quality at 25–40% lower cost. Instant quotes, professional installs, and a Lowest Price Guarantee. Call/WhatsApp: 9873802205</p>
         <div style="display:flex;gap:12px;flex-wrap:wrap">
           <a class="cta" href="https://wa.me/919873802205">Book on WhatsApp</a>
@@ -290,7 +332,7 @@ button.primary{background:var(--accent);color:#fff;padding:14px 18px;border-radi
   </section>
 
   <section style="padding-top:40px">
-    <h2>Aluminium & uPVC Doors – Complete India Price & Buying Guide</h2>
+    <h2>Aluminium & uPVC Doors & Complete India Price & Buying Guide</h2>
     <p class="small">
     Looking for aluminium sliding door price in India, uPVC sliding door cost, aluminium glass door price, balcony sliding door aluminium rate, or office aluminium partition price? You are in the right place. We provide premium-quality aluminium and uPVC doors across India at direct factory prices. Our aluminium sliding doors are designed for homes, flats, villas, offices, shops, and commercial spaces. Compared to branded companies that quote ₹40,000–₹55,000 for a standard 6x8 aluminium sliding door, we deliver the same or better quality in the range of ₹28,000–₹32,000 including professional installation.
     <br><br>
@@ -320,7 +362,7 @@ button.primary{background:var(--accent);color:#fff;padding:14px 18px;border-radi
   </section>
 
   <section style="padding-top:40px">
-    <h2>Google Trust & Local Presence</h2>
+    <h2>Premium Aluminium & uPVC Doors</h2>
     <p class="small">Our business follows Google-compliant SEO practices. We maintain Google Business profiles, verified contact details, clear pricing information and real customer interactions.</p>
     <ul class="small">
       <li>Verified phone number & WhatsApp support</li>
@@ -329,18 +371,7 @@ button.primary{background:var(--accent);color:#fff;padding:14px 18px;border-radi
       <li>No misleading claims or spam keywords</li>
     </ul>
   </section>
-
-  <section style="padding-top:40px">
-    <h2>Step-by-Step: How Google Finds & Ranks Our Website</h2>
-    <ol class="small">
-      <li>Search Console submission for indexing</li>
-      <li>XML sitemap submission</li>
-      <li>Fast-loading mobile-first pages</li>
-      <li>High-intent keywords (aluminium sliding door price, uPVC door cost, etc.)</li>
-      <li>User engagement through calculator & WhatsApp booking</li>
-    </ol>
-  </section>
-
+  
 </main>
 
 <footer class="footer">
@@ -362,16 +393,6 @@ button.primary{background:var(--accent);color:#fff;padding:14px 18px;border-radi
 <script>// fb pixel placeholder</script>
 <!-- Google Tag Manager -->
 <script>// gtm placeholder</script>
-
-<!-- Exit Intent Popup -->
-<script>
-setTimeout(()=>{
- if(!localStorage.getItem('exitOffer')){
-  localStorage.setItem('exitOffer','1');
-  alert('Wait! Get FREE upgrade worth ₹1,000. Click WhatsApp to claim.');
- }
-},15000);
-</script>
 
 <!-- Referral Banner -->
 <div style="position:fixed;left:0;bottom:0;width:100%;background:#16a34a;color:#fff;padding:10px;text-align:center;font-weight:700">Refer & Earn: ₹1000 cashback on every successful referral | WhatsApp us</div>
@@ -399,7 +420,9 @@ function estimate(){
 function bookVisit(){
   const url='https://wa.me/919873802205?text='+encodeURIComponent('I want to book a site visit. Charge ₹499.');
   window.open(url,'_blank');
+   
 }
+  
 </script>
 </body>
 </html>
